--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
     <footer>
         <div class="container">
             <ul class="social-links">
-                <li><a href="https://github.com/seu-github" target="_blank"><i class="ri-github-fill"></i> GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/seu-perfil" target="_blank"><i class="ri-linkedin-fill"></i> LinkedIn</a></li>
-                <li><a href="mailto:seu-email@dominio.com"><i class="ri-mail-fill"></i> E-mail</a></li>
+                <li><a href="https://github.com/eryyoficial" target="_blank"><i class="ri-github-fill"></i> GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/eryyoficial" target="_blank"><i class="ri-linkedin-fill"></i> LinkedIn</a></li>
+                <li><a href="mailto:eryyoficial@gmail.com"><i class="ri-mail-fill"></i> E-mail</a></li>
             </ul>
             <p>&copy; 2024 Hermínio Francisco. Todos os direitos reservados.</p>
         </div>
