--- a/index.html
+++ b/index.html
@@ -91,80 +91,78 @@
 
     <!-- Tecnologias -->
     <section id="technologies" class="container section-tech">
-            <h2>Tecnologias</h2>
-            <ul class="tech-list">
-                <li><img src="public/images/icons/html.png" alt="">  <strong>HTML5</strong></li>
-                <li><img src="public/images/icons/css.png" alt=""> <strong>CSS3</strong></li>
-                <li><img src="public/images/icons/js.png" alt=""> <strong>JavaScript</strong></li>
-                <li><img src="public/images/icons/php.png" alt=""><strong>PHP</strong></li>
-                <li><img src="public/images/icons/c-sharp.png" alt=""> <strong>c-sharp</strong></li>
-                <li><img src="public/images/icons/bootstrap.png" alt=""> <strong>Bootstrap</strong></li>
-                <li><img src="public/images/icons/tailwind.png" alt=""> <strong>Tailwind CSS</strong></li>
-                <li><img src="public/images/icons/git.png" alt=""> <strong>Git</strong></li>
-                <li><img src="public/images/icons/github.png" alt=""> <strong>GitHub</strong></li>
-            </ul>
+        <h2>Tecnologias</h2>
+        <ul class="tech-list">
+            <li><img src="public/images/icons/html.png" alt=""> <strong>HTML5</strong></li>
+            <li><img src="public/images/icons/css.png" alt=""> <strong>CSS3</strong></li>
+            <li><img src="public/images/icons/js.png" alt=""> <strong>JavaScript</strong></li>
+            <li><img src="public/images/icons/php.png" alt=""><strong>PHP</strong></li>
+            <li><img src="public/images/icons/c-sharp.png" alt=""> <strong>c-sharp</strong></li>
+            <li><img src="public/images/icons/bootstrap.png" alt=""> <strong>Bootstrap</strong></li>
+            <li><img src="public/images/icons/tailwind.png" alt=""> <strong>Tailwind CSS</strong></li>
+            <li><img src="public/images/icons/git.png" alt=""> <strong>Git</strong></li>
+            <li><img src="public/images/icons/github.png" alt=""> <strong>GitHub</strong></li>
+        </ul>
         <a class="baixo" href="#projects"><i class="ri-arrow-down-double-line"></i></a>
     </section>
 
     <!-- Projetos -->
-    <section id="projects" class="section-projects">
-        <div class="container">
-            <h2>Projetos</h2>
+    <section id="projects" class="container section-projects">
+        <h2>Projetos</h2>
             <div class="project-cards">
                 <div class="card">
                     <img src="kino.jpg" alt="Kino Angola">
                     <h3>Kino Angola</h3>
                     <p>Plataforma que conecta usuários a restaurantes e bares em Luanda, focada em personalização de
                         experiências.</p>
-                    <a href="https://www.kinoangola.com" target="_blank">Visite o Site</a>
+                    <a class="botao_principal" href="https://www.kinoangola.com" target="_blank">Visite o Site</a>
                 </div>
                 <div class="card">
                     <img src="eboostify.jpg" alt="eBoostify">
                     <h3>eBoostify</h3>
                     <p>Agência de marketing digital especializada em soluções personalizadas para pequenas empresas.</p>
-                    <a href="https://www.eboostify.com" target="_blank">Visite o Site</a>
+                    <a class="botao_principal" href="https://www.eboostify.com" target="_blank">Visite o Site</a>
                 </div>
                 <div class="card">
                     <img src="inlin.jpg" alt="InLin">
                     <h3>InLin</h3>
                     <p>Plataforma de ensino online oferecendo cursos interativos e acessíveis para jovens profissionais.
                     </p>
-                    <a href="https://www.inlin.com" target="_blank">Visite o Site</a>
+                    <a class="botao_principal" href="https://www.inlin.com" target="_blank">Visite o Site</a>
                 </div>
                 <div class="card">
                     <img src="kabas.jpg" alt="Kabas Essences">
                     <h3>Kabas Essences</h3>
                     <p>Loja online de perfumes de luxo, oferecendo uma vasta gama de fragrâncias exclusivas.</p>
-                    <a href="https://www.kabasessences.com" target="_blank">Visite o Site</a>
+                    <a class="botao_principal" href="https://www.kabasessences.com" target="_blank">Visite o Site</a>
                 </div>
             </div>
-        </div>
     </section>
 
     <!-- Feedback -->
     <section id="feedback" class="container section-feedback">
-            <h2>Feedbacks</h2>
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="feedback-card">
-                            <p>"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
-                                profissionalismo dele." - Maria</p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="feedback-card">
-                            <p>"Trabalhar com Hermínio foi uma experiência excelente. Ele superou nossas expectativas!"
-                                - João</p>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="feedback-card">
-                            <p>"Recomendo fortemente o trabalho de Hermínio. O design e funcionalidade que ele criou
-                                foram ótimos!" - Carla</p>
-                        </div>
+        <h2>Feedbacks</h2>
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="feedback-card">
+                        <p>"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
+                            profissionalismo dele." - Maria</p>
                     </div>
                 </div>
+                <div class="swiper-slide">
+                    <div class="feedback-card">
+                        <p>"Trabalhar com Hermínio foi uma experiência excelente. Ele superou nossas expectativas!"
+                            - João</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="feedback-card">
+                        <p>"Recomendo fortemente o trabalho de Hermínio. O design e funcionalidade que ele criou
+                            foram ótimos!" - Carla</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
