--- a/index.html
+++ b/index.html
@@ -111,32 +111,33 @@
         <h2>Projetos</h2>
             <div class="project-cards">
                 <div class="card">
-                    <img src="kino.jpg" alt="Kino Angola">
+                    <img src="public/images/kino__.png" alt="Kino Angola">
                     <h3>Kino Angola</h3>
                     <p>Plataforma que conecta usuários a restaurantes e bares em Luanda, focada em personalização de
                         experiências.</p>
-                    <a class="botao_principal" href="https://www.kinoangola.com" target="_blank">Visite o Site</a>
+                    <a class="botao_principal" href="https://eryyoficial.github.io/frontend/" target="_blank">Visite o Site</a>
                 </div>
                 <div class="card">
-                    <img src="eboostify.jpg" alt="eBoostify">
-                    <h3>eBoostify</h3>
-                    <p>Agência de marketing digital especializada em soluções personalizadas para pequenas empresas.</p>
-                    <a class="botao_principal" href="https://www.eboostify.com" target="_blank">Visite o Site</a>
-                </div>
-                <div class="card">
-                    <img src="inlin.jpg" alt="InLin">
+                    <img src="public/images/inlib_.png" alt="InLin">
                     <h3>InLin</h3>
                     <p>Plataforma de ensino online oferecendo cursos interativos e acessíveis para jovens profissionais.
                     </p>
                     <a class="botao_principal" href="https://www.inlin.com" target="_blank">Visite o Site</a>
                 </div>
                 <div class="card">
-                    <img src="kabas.jpg" alt="Kabas Essences">
+                    <img src="public/images/inlib_.png" alt="Kabas Essences">
                     <h3>Kabas Essences</h3>
                     <p>Loja online de perfumes de luxo, oferecendo uma vasta gama de fragrâncias exclusivas.</p>
                     <a class="botao_principal" href="https://www.kabasessences.com" target="_blank">Visite o Site</a>
                 </div>
+                <div class="card">
+                    <img src="public/images/eboostify__.png" alt="eBoostify">
+                    <h3>eBoostify</h3>
+                    <p>Agência de marketing digital especializada em soluções personalizadas para pequenas empresas.</p>
+                    <a class="botao_principal" href="https://eboostify.netlify.app/" target="_blank">Visite o Site</a>
+                </div>
             </div>
+            <a class="baixo" href="#feedback"><i class="ri-arrow-down-double-line"></i></a>
     </section>
 
     <!-- Feedback -->
