--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <h3>InLin</h3>
                     <p>Plataforma de ensino online oferecendo cursos interativos e acessíveis para jovens profissionais.
                     </p>
-                    <a class="botao_principal" href="https://www.inlin.com" target="_blank">Visite o Site</a>
+                    <a class="botao_principal" href="https://eryyoficial.github.io/inlib-frontend/index.html" target="_blank">Visite o Site</a>
                 </div>
                 <div class="card">
                     <img src="public/images/inlib_.png" alt="Kabas Essences">
