--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="#projects" class="nav-link">Projetos</a>
             </li>
             <li class="nav-item">
-                <a href="#contact" class="nav-link">Contato</a>
+                <a href="#feedback" class="nav-link">Feedback</a>
             </li>
         </ul>
         <div class="nav-extras">
@@ -109,67 +109,91 @@
     <!-- Projetos -->
     <section id="projects" class="container section-projects">
         <h2>Projetos</h2>
-            <div class="project-cards">
-                <div class="card">
-                    <img src="public/images/kino__.png" alt="Kino Angola">
-                    <h3>Kino Angola</h3>
-                    <p>Plataforma que conecta usuários a restaurantes e bares em Luanda, focada em personalização de
-                        experiências.</p>
-                    <a class="botao_principal" href="https://eryyoficial.github.io/frontend/" target="_blank">Visite o Site</a>
-                </div>
-                <div class="card">
-                    <img src="public/images/inlib_.png" alt="InLin">
-                    <h3>InLin</h3>
-                    <p>Plataforma de ensino online oferecendo cursos interativos e acessíveis para jovens profissionais.
-                    </p>
-                    <a class="botao_principal" href="https://eryyoficial.github.io/inlib-frontend/index.html" target="_blank">Visite o Site</a>
-                </div>
-                <div class="card">
-                    <img src="public/images/inlib_.png" alt="Kabas Essences">
-                    <h3>Kabas Essences</h3>
-                    <p>Loja online de perfumes de luxo, oferecendo uma vasta gama de fragrâncias exclusivas.</p>
-                    <a class="botao_principal" href="https://www.kabasessences.com" target="_blank">Visite o Site</a>
-                </div>
-                <div class="card">
-                    <img src="public/images/eboostify__.png" alt="eBoostify">
-                    <h3>eBoostify</h3>
-                    <p>Agência de marketing digital especializada em soluções personalizadas para pequenas empresas.</p>
-                    <a class="botao_principal" href="https://eboostify.netlify.app/" target="_blank">Visite o Site</a>
-                </div>
+        <div class="project-cards">
+            <div class="card">
+                <img src="public/images/kino__.png" alt="Kino Angola">
+                <h3>Kino Angola</h3>
+                <p>Plataforma angolana que conecta usuários a restaurantes e locais de lazer, oferecendo recomendações
+                    personalizadas.</p>
+                <a class="botao_principal" href="https://eryyoficial.github.io/frontend/" target="_blank">Visite o
+                    Site</a>
             </div>
-            <a class="baixo" href="#feedback"><i class="ri-arrow-down-double-line"></i></a>
+            <div class="card">
+                <img src="public/images/inlib_.png" alt="InLin">
+                <h3>InLin</h3>
+                <p>Uma biblioteca digital que facilita o acesso a livros e recursos educacionais online para os
+                    estudantes da UNILUANDA.
+                </p>
+                <a class="botao_principal" href="https://eryyoficial.github.io/inlib-frontend/index.html"
+                    target="_blank">Visite o Site</a>
+            </div>
+            <div class="card">
+                <img src="public/images/inlib_.png" alt="Kabas Essences">
+                <h3>Kabas Essences</h3>
+                <p>Loja online angolana especializada em perfumes de excelente qualidade, oferecendo fragrâncias
+                    exclusivas e acessíveis.</p>
+                <a class="botao_principal" href="https://www.kabasessences.com" target="_blank">Visite o Site</a>
+            </div>
+            <div class="card">
+                <img src="public/images/eboostify__.png" alt="eBoostify">
+                <h3>eBoostify</h3>
+                <p>Agência de marketing digital e desenvolvimento web, focada em soluções personalizadas para pequenos
+                    negócios e startups.</p>
+                <a class="botao_principal" href="https://eboostify.netlify.app/" target="_blank">Visite o Site</a>
+            </div>
+        </div>
+        <a class="baixo" href="#feedback"><i class="ri-arrow-down-double-line"></i></a>
     </section>
 
     <!-- Feedback -->
     <section id="feedback" class="container section-feedback">
         <h2>Feedbacks</h2>
-        <div class="swiper-container">
+        <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="feedback-card">
-                        <p>"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
+                        <img src="public/images/me2.png" alt="" class="foto">
+                        <h3>Marinela Guedes</h3>
+                        <p class="area">Dev | Frontend</p>
+                        <p class="comentario">"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
                             profissionalismo dele." - Maria</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="feedback-card">
-                        <p>"Trabalhar com Hermínio foi uma experiência excelente. Ele superou nossas expectativas!"
-                            - João</p>
+                        <img src="public/images/me2.png" alt="" class="foto">
+                        <h3>Marinela Guedes</h3>
+                        <p class="area">Dev | Frontend</p>
+                        <p class="comentario">"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
+                            profissionalismo dele." - Maria</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="feedback-card">
-                        <p>"Recomendo fortemente o trabalho de Hermínio. O design e funcionalidade que ele criou
-                            foram ótimos!" - Carla</p>
+                        <img src="public/images/me2.png" alt="" class="foto">
+                        <h3>Marinela Guedes</h3>
+                        <p class="area">Dev | Frontend</p>
+                        <p class="comentario">"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
+                            profissionalismo dele." - Maria</p>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="feedback-card">
+                        <img src="public/images/me2.png" alt="" class="foto">
+                        <h3>Marinela Guedes</h3>
+                        <p class="area">Dev | Frontend</p>
+                        <p class="comentario">"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
+                            profissionalismo dele." - Maria</p>
                     </div>
                 </div>
             </div>
+            <div class="swiper-pagination"></div>
         </div>
+        <a class="baixo" href="#feedback"><i class="ri-arrow-down-double-line"></i></a>
     </section>
 
     <!-- Contato -->
-    <section id="contact" class="section-contact">
-        <div class="container">
+    <section id="contact" class="container section-contact">
             <h2>Contato</h2>
             <form>
                 <label for="name">Nome:</label>
@@ -186,12 +210,11 @@
 
                 <button type="submit">Enviar</button>
             </form>
-        </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <div class="container">
+        <div class="container footer">
             <ul class="social-links">
                 <li><a href="https://github.com/eryyoficial" target="_blank"><i class="ri-github-fill"></i> GitHub</a>
                 </li>
