--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             </li>
         </ul>
         <div class="nav-extras">
-            <a href="#cv" class="botao_principal">Bora trabalhar</a>
-            <a href="#cv" class="botao_principal">Baixar CV<i class="ri-arrow-down-s-line"></i></a>
+            <a href="https://wa.me/message/S6RZSQWV3PKXF1" class="botao_principal" target="_blank">Vamos trabalhar!</a>
+            <a href="public/docs/CV HerminioFrancisco.pdf" download="CV HerminioFrancisco.pdf" class="botao_principal" target="_blank">Baixar CV
+                <i class="ri-skip-down-line"></i>
+            </a>
         </div>
     </header>
 
@@ -189,7 +191,7 @@
             </div>
             <div class="swiper-pagination"></div>
         </div>
-        <a class="baixo" href="#feedback"><i class="ri-arrow-down-double-line"></i></a>
+        <a class="baixo" href="#contact"><i class="ri-arrow-down-double-line"></i></a>
     </section>
 
     <!-- Contato -->
