--- a/index.html
+++ b/index.html
@@ -163,38 +163,34 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="feedback-card">
-                        <img src="public/images/me2.png" alt="" class="foto">
-                        <h3>Marinela Guedes</h3>
+                        <img src="public/images/andre.png" alt="" class="foto">
+                        <h3>André Gideão</h3>
                         <p class="area">Dev | Frontend</p>
-                        <p class="comentario">"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
-                            profissionalismo dele." - Maria</p>
+                        <p class="comentario">"Criatividade e eficiência impecáveis. Seu trabalho transformou nossa visão em realidade. Parabéns!"</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="feedback-card">
-                        <img src="public/images/me2.png" alt="" class="foto">
-                        <h3>Marinela Guedes</h3>
-                        <p class="area">Dev | Frontend</p>
-                        <p class="comentario">"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
-                            profissionalismo dele." - Maria</p>
+                        <img src="public/images/julio.png" alt="" class="foto">
+                        <h3>Ngombo Manuel</h3>
+                        <p class="area">Dev | Fullstack</p>
+                        <p class="comentario">"Codificação limpa, habilidades sólidas e grande profissionalismo. Uma excelente adição a qualquer equipe!"</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="feedback-card">
-                        <img src="public/images/me2.png" alt="" class="foto">
-                        <h3>Marinela Guedes</h3>
-                        <p class="area">Dev | Frontend</p>
-                        <p class="comentario">"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
-                            profissionalismo dele." - Maria</p>
+                        <img src="public/images/lidio.png" alt="" class="foto">
+                        <h3>Lídio Cortez</h3>
+                        <p class="area">Dev | Backend</p>
+                        <p class="comentario">"Excelente desenvolvedor! Sempre entrega projetos com alta qualidade e no prazo. Recomendo fortemente!"</p>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="feedback-card">
-                        <img src="public/images/me2.png" alt="" class="foto">
-                        <h3>Marinela Guedes</h3>
+                        <img src="public/images/angela.png" alt="" class="foto">
+                        <h3>Ângela Barroso</h3>
                         <p class="area">Dev | Frontend</p>
-                        <p class="comentario">"Hermínio entregou um projeto incrível e no prazo! Estou impressionada com o
-                            profissionalismo dele." - Maria</p>
+                        <p class="comentario">"O auxílio deste desenvolvedor ajudou imenso e melhour o bastante o ritmo de trabalho da nossa empresa.</p>
                     </div>
                 </div>
             </div>
