--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 </head>
 
 <body>
-    <header>
-        <nav class="nav-menu">
-            <i class="ri-menu-unfold-line"></i>
-        </nav>
+    <header class="nav_header">
+            <button class="hamburger"></button>
         <nav class="nav-logo">
             <a href="#">
                 <p></p>
@@ -23,21 +21,21 @@
                 <p></p>
             </a>
         </nav>
-        <ul class="nav-list">
+        <ul class="nav-list listhamb">
             <li class="nav-item">
-                <a href="#home" class="nav-link">Home</a>
+                <a href="#home" class="nav-link linkhamb">Home</a>
             </li>
             <li class="nav-item">
-                <a href="#about" class="nav-link">Conheça-me</a>
+                <a href="#about" class="nav-link linkhamb">Conheça-me</a>
             </li>
             <li class="nav-item">
-                <a href="#technologies" class="nav-link">Tecnologias</a>
+                <a href="#technologies" class="nav-link linkhamb">Tecnologias</a>
             </li>
             <li class="nav-item">
-                <a href="#projects" class="nav-link">Projetos</a>
+                <a href="#projects" class="nav-link linkhamb">Projetos</a>
             </li>
             <li class="nav-item">
-                <a href="#feedback" class="nav-link">Feedback</a>
+                <a href="#feedback" class="nav-link linkhamb">Feedback</a>
             </li>
         </ul>
         <div class="nav-extras">
@@ -96,8 +94,6 @@
         </div>
         <a class="baixo" href="#technologies"><i class="ri-arrow-down-double-line"></i></a>
     </section>
-    </div>
-    </div>
     </section>
 
     <!-- Tecnologias -->
